HAHAHAHAHA it WORKS and the Mets WON life is PRETTY GREAT right now.

--- a/platforms/photon/templates/application.tmpl
+++ b/platforms/photon/templates/application.tmpl
@@ -1,6 +1,7 @@
 #include "application.h"
-
-<%- includes %>
+<% includes.forEach(function(incl){ %>
+<%- incl %>
+<% }); %>
 
 SYSTEM_MODE(AUTOMATIC);
 
