Fixed issue where multiple strands of neopixels caused collision

--- a/platforms/photon/components/neopixels/templates/pixels.tmpl
+++ b/platforms/photon/components/neopixels/templates/pixels.tmpl
@@ -1,4 +1,4 @@
-int pixels(String color){
+int pixels_<%= name %>(String color){
     int bar = color.indexOf('|');
     String index = color.substring(0, bar);
     long indexNum;
